Transferencias (#22)
* feat: Cambios nuevos

* feat: cambios importantes en la lógica

* feat: cambios importantes en la lógica prt2

* feat : cambio en la respuesta de los metodos del repositorio de Vendedor

* feat : cambio en la entidad de compras

* Agrega módulo Orden de Compra en ui-components

* feat : cambio en las compras

* feat : cambio en las compras service

* Agrega Orden de Compra al menú de Producción

* feat : cambio en las compras serviceImpl

* Agrega Orden de Compra al menú de Producción

* feat : cambio en las compras

* feat : cambio en ordendeCompra

* Orden de Compra

* Modulo de Orden de Compras Terminado

* Modulo de Kardex terminado

* cambios subidos

* add produccion module and routes

* componentes

* feat: cambios en Transferencias

* Modulo de Transferencias

---------

Co-authored-by: LinQisheng <114274209+LinQisheng@users.noreply.github.com>